<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="@dimen/_8sdp"
    android:padding="@dimen/_10sdp"
    android:layout_margin="@dimen/_22sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#121212"
        >
        <TextView
            android:id="@+id/txtview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/lobster"
            android:layout_margin="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            />
        <EditText
            android:id="@+id/edForgetPass"
            android:drawableRight="@drawable/baseline_email_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtview"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_20sdp"
            android:hint="Email"
            android:textColorHint="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edForgetPass"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:layout_weight="0"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnReset"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="0"
                android:text="@string/reset"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />
        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>