<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8A3CC"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.LoginPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_90sdp"
        android:fontFamily="@font/lobster"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/_140sdp"
        android:layout_marginEnd="30dp"
        android:background="#A8A3CC"
        android:backgroundTint="#A8A3CC"
        app:cardCornerRadius="30dp"
        app:cardElevation="@dimen/_5sdp">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/edittext"
            android:drawableEnd="@drawable/person"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="30dp"
        android:background="#A8A3CC"
        android:backgroundTint="#A8A3CC"
        app:cardCornerRadius="30dp"
        app:cardElevation="@dimen/_5sdp">

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext"
            android:drawableEnd="@drawable/baseline_lock_24"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="HardcodedText" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/forgetLoginPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:shadowColor="#C4958F8F"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="3"
        android:text="@string/forgot_your_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:shadowDx="4"
        android:shadowDy="4"
        android:elevation="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:text="@string/submit" />

    <TextView
        android:shadowColor="#C4958F8F"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="3"
        android:id="@+id/createAcctxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:elevation="@dimen/_20sdp"
        android:text="@string/create_new_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp" />


</LinearLayout>